<resources>
    <string name="app_name">Films</string>
    <string name="NameButton">Description</string>
    <string name="Title1" translatable="false">Снега больше не будет</string>
    <string name="Title2">I Care a Lot</string>
    <string name="Title3">Mortal Kombat</string>
    <string name="description1" translatable="false">Иммигрант Женя работает массажистом. Среди его клиентов — богатые жители элитного поселка в Польше. Несмотря на свое богатство, в глубине души все они несчастны. Руки таинственного незнакомца лечат их телесные и душевные недуги, взгляд успокаивает и видит их души насквозь. Русский акцент Жени звучит для его клиентов как песня из прошлого, воспоминание о беззаботном детстве. Скоро его необыкновенные способности изменят жизнь каждого из них.</string>
    <string name="description2" translatable="false">Марла руководствуется принципом «побеждает сильнейший». Она искусно пользуется людьми, прикрываясь заботой о них, и наловчилась безнаказанно обдирать своих богатых клиентов за счет редкого обаяния и немалой доли цинизма. Но её новая подопечная не так проста, как кажется, и сладкая жизнь аферистки скоро превратится в игру на выживание.</string>
    <string name="description3" translatable="false">Боец смешанных единоборств Коул Янг (Льюис Тан), обладающий таинственной меткой в виде дракона, оказывается мишенью для Саб-Зиро (Джо Таслим) — воина из Внешнего Мира. Желая спасти свою семью, Коул отправляется к лорду Рейдену — богу грома и защитнику Земоного Царства. Теперь герою, вместе с другими воинами, предстоит сразиться с бойцами Внешнего Мира на турнире «Мортал Комбат», чтобы спасти Землю от завоевания.</string>
    <string name="NameButtonInvite">To invite a friend</string>
    <string name="checkBoxName">Like</string>
    <string name="textComment">Comment:</string>
    <string name="invite">Invite</string>
    <string name="favorite">Favorite</string>
    <string name="questionQuite">Close the application?</string>
    <string name="titleQuite">Quite</string>
    <string name="responseYes">Yes</string>
    <string name="responseNo">No</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="RemovedFilm">Removed film</string>
    <string name="AddedFilm">Added film</string>
</resources>